# dom-wallet-v3

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Readme.md  build.mjs  deny.toml
.githooks/: commit-msg
.github/workflows/: release-wallet.yml  stabilize-wallet.yml
crates/dom-wallet-chain/: Cargo.toml
crates/dom-wallet-chain/src/: lib.rs
crates/dom-wallet-core/: Cargo.toml
crates/dom-wallet-core-protocol/: Cargo.toml
crates/dom-wallet-core-protocol/src/: lib.rs
crates/dom-wallet-core-protocol/tests/: protocol.rs
crates/dom-wallet-core-recovery/: Cargo.toml
crates/dom-wallet-core-recovery/src/: lib.rs
crates/dom-wallet-core-recovery/tests/: recovery.rs
crates/dom-wallet-core-restore/: Cargo.toml
crates/dom-wallet-core-restore/src/: lib.rs
crates/dom-wallet-core-restore/tests/: seed_restore.rs
crates/dom-wallet-core-submit/: Cargo.toml
crates/dom-wallet-core-submit/src/: lib.rs
crates/dom-wallet-core-submit/tests/: core_submit.rs
crates/dom-wallet-core-sync/: Cargo.toml
crates/dom-wallet-core-sync/src/: lib.rs
crates/dom-wallet-core-sync/tests/: core_sync.rs
crates/dom-wallet-core/src/: lib.rs  live_e2e.rs
crates/dom-wallet-core/tests/: production_cutover.rs
crates/dom-wallet-crypto/: Cargo.toml
crates/dom-wallet-crypto/src/: lib.rs
crates/dom-wallet-domain/: Cargo.toml
crates/dom-wallet-domain/src/: lib.rs
crates/dom-wallet-embedded-core/: Cargo.toml
crates/dom-wallet-embedded-core/src/: lib.rs  miner.rs
crates/dom-wallet-node-manager/: Cargo.toml
crates/dom-wallet-node-manager/src/: lib.rs  sidecar_keys.rs
crates/dom-wallet-production-backend/: Cargo.toml
crates/dom-wallet-production-backend/src/: lib.rs
crates/dom-wallet-protocol/: Cargo.toml
crates/dom-wallet-protocol/src/: lib.rs
crates/dom-wallet-storage/: Cargo.toml
crates/dom-wallet-storage/fixtures/: v0.1.x-schema-v1.json
crates/dom-wallet-storage/src/: lib.rs
crates/dom-wallet-updater/: Cargo.toml
crates/dom-wallet-updater/src/: lib.rs
docs/: ARCHITECTURE.md  AUTOMATIC_UPDATES.md  BUILD_AND_RUN.md  CONFIRMED_DESIGN_INPUTS.md  DOM_TAURI_PRODUCT_CONTINUITY.md  ENGINEERING_SOURCES.md  EPIC_DOM_ADOPTION_MATRIX.md  FOUNDATIONAL_CRYPTOGRAPHIC_REVIEW_REQUEST.md  FOUNDATIONAL_DECISION_REGISTER.md  FOUNDATIONAL_PROTOCOL_DECISION_REQUEST.md  FOUNDATIONAL_SECRET_DOMAIN_DESIGN_OPTIONS.md  IMPLEMENTATION_PHASE1A_ARCHITECTURE.md  LIVE_VPS_E2E_RUNBOOK.md  MAINNET_AND_COMMUNITY_REVIEW_POLICY.md  MANUAL_SLATE_EXCHANGE.md  NODE_CONFIGURATION.md  NODE_INTEGRATION.md  REFERENCE_BASELINE.md  RELEASING.md  SPECIFICATION_CONSISTENCY_MATRIX.md  SPECIFICATION_GATE.md  TRANSACTION_ENGINE.md  WALLET_RECOVERY_AND_BACKUP.md  dom-protocol-node-release.yml.example
frontend/: bridge.js  build.mjs  index.html  main.js  package-lock.json  package.json  styles.css
frontend/tests/: native-bridge.test.mjs  release-workflow.test.mjs  status.test.mjs  visual-parity.test.mjs
reports/: DOM_WALLET_SECRET_DOMAIN_REFERENCE_STUDY.md  DOM_Wallet_V3_v0.2.0_Stabilization_Report.docx  EPIC_SECRET_DOMAIN_REFERENCE_STUDY.md  FOUNDATIONAL_BLOCKER_CLOSURE_PASS1.md  FOUNDATIONAL_BLOCKER_CLOSURE_PASS2.md  FOUNDATIONAL_BLOCKER_STATUS_RECONCILIATION.md  FOUNDATIONAL_SECRET_DOMAIN_OPTIONS_PASS1.md  FOUNDATIONAL_SPECIFICATIONS_CROSS_REVIEW.md  FOUNDATIONAL_SPECIFICATIONS_PASS1.md  FOUNDATIONAL_SPECIFICATIONS_PASS2.md  FOUNDATIONAL_STABLE_VIEW_APPROVAL.md  IMPLEMENTATION_PHASE1A_FOUNDATION.md  IMPLEMENTATION_PHASE1B_A_TRANSACTION_ENGINE.md  MAINNET_AND_COMMUNITY_REVIEW_POLICY_UPDATE.md  PHASE1B_NODE_INTEGRATION.md  README_VISUAL_IDENTITY_REPORT.md  REFERENCE_SOURCE_MANIFEST.md  V1_V2_VISUAL_PARITY_RESTORATION.md  V3_RECOVERY_BACKUP_SECURITY_REPORT.md  WALLET_V0.2.0_SIGNED_UPDATE_STABILIZATION.md  WALLET_V0.2.0_STABILIZATION.md
scripts/: test-packaged-native-bridge-linux.mjs  test-windows-installers.ps1
specs/: 0000_DESIGN_PRINCIPLES.md  0001_THREAT_MODEL.md  0002_WALLET_STATE_MODEL.md  0003_TRANSACTION_LIFECYCLE.md  0004_STORAGE_ATOMICITY.md  0005_CHAIN_SOURCE_AND_SYNC.md  0006_REORG_AND_ROLLBACK.md  0007_KEY_DERIVATION_AND_SECRETS.md  0008_BACKUP_AND_RECOVERY.md  0009_ECONOMIC_RULES.md  0010_API_AND_TRANSPORT_SECURITY.md  0011_MIGRATION_FROM_V2.md  0012_TESTING_AND_ASSURANCE.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/fixtures/sidecar/ab45a2944f22fe00f9b12984354f0d5d7cdd229a/: README.md  sidecar-manifest.json  sidecar-manifest.json.minisig
