[workspace]
resolver = "2"
members = [
    "crates/dom-wallet-domain",
    "crates/dom-wallet-crypto",
    "crates/dom-wallet-storage",
    "crates/dom-wallet-chain",
    "crates/dom-wallet-protocol",
    "crates/dom-wallet-core",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Soren Planck <sorenplanck@tutamail.com>"]
repository = "https://github.com/sorenplanck/dom-wallet-v3"

[workspace.dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
hex = "0.4"
hkdf = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
tauri = { version = "2.11.2", default-features = false, features = ["wry"] }
tauri-build = "2.6.2"

# The transaction engine uses the immutable DOM protocol implementation as the
# sole authority for slate construction, transaction serialization, proof and
# signature validation.  These are deliberately revision pinned rather than
# copied into this wallet workspace.
dom-core = { git = "https://github.com/sorenplanck/dom-protocol", rev = "f10667d86196daf4599eff6074a7abf73b6ed55a" }
dom-crypto = { git = "https://github.com/sorenplanck/dom-protocol", rev = "f10667d86196daf4599eff6074a7abf73b6ed55a" }
dom-consensus = { git = "https://github.com/sorenplanck/dom-protocol", rev = "f10667d86196daf4599eff6074a7abf73b6ed55a" }
dom-serialization = { git = "https://github.com/sorenplanck/dom-protocol", rev = "f10667d86196daf4599eff6074a7abf73b6ed55a" }
dom-tx = { git = "https://github.com/sorenplanck/dom-protocol", rev = "f10667d86196daf4599eff6074a7abf73b6ed55a" }
dom-slate = { git = "https://github.com/sorenplanck/dom-protocol", rev = "f10667d86196daf4599eff6074a7abf73b6ed55a" }
