[workspace]
resolver = "2"
members = [
    "crates/dom-wallet-domain",
    "crates/dom-wallet-crypto",
    "crates/dom-wallet-storage",
    "crates/dom-wallet-core",
    "crates/dom-wallet-embedded-core",
    "crates/dom-wallet-core-sync",
    "crates/dom-wallet-core-submit",
    "crates/dom-wallet-core-protocol",
    "crates/dom-wallet-core-recovery",
    "crates/dom-wallet-core-restore",
    "crates/dom-wallet-updater",
    "crates/dom-wallet-production-backend",
    "src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Soren Planck <sorenplanck@tutamail.com>"]
repository = "https://github.com/sorenplanck/dom-wallet-v3"
license = "MIT"

[workspace.dependencies]
argon2 = "0.5"
base64 = "0.22"
bip39 = "2.1"
chacha20poly1305 = "0.10"
fs2 = "0.4"
hex = "0.4"
hkdf = "0.12"
minisign-verify = "0.2.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
tauri = { version = "2.11.2", default-features = false, features = ["wry"] }
tauri-build = "2.6.2"

# The transaction engine uses the immutable DOM protocol implementation as the
# sole authority for slate construction, transaction serialization, proof and
# signature validation.  These are deliberately revision pinned rather than
# copied into this wallet workspace.
dom-core = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-crypto = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-consensus = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-serialization = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-tx = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-slate = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-config = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-chain = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-node = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-pow = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-wallet-core-api = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
dom-wallet-recovery = { git = "https://github.com/sorenplanck/dom-protocol", rev = "6c58b0383c095384cd0150cabf074aa00fb57b17" }
