[workspace]
resolver = "2"
members = [
    "crates/dom-wallet-domain",
    "crates/dom-wallet-crypto",
    "crates/dom-wallet-storage",
    "crates/dom-wallet-core",
    "crates/dom-wallet-embedded-core",
    "crates/dom-wallet-core-sync",
    "crates/dom-wallet-core-submit",
    "crates/dom-wallet-core-protocol",
    "crates/dom-wallet-core-recovery",
    "crates/dom-wallet-core-restore",
    "crates/dom-wallet-updater",
    "crates/dom-wallet-node-manager",
    "crates/dom-wallet-production-backend",
    "src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Soren Planck <sorenplanck@tutamail.com>"]
repository = "https://github.com/sorenplanck/dom-wallet-v3"
license = "MIT"

[workspace.dependencies]
argon2 = "0.5"
base64 = "0.22"
bip39 = "2.1"
chacha20poly1305 = "0.10"
fs2 = "0.4"
hex = "0.4"
hkdf = "0.12"
minisign-verify = "0.2.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
reqwest13 = { package = "reqwest", version = "=0.13.4", default-features = false }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
tauri = { version = "2.11.2", default-features = false, features = ["wry"] }
tauri-build = "2.6.2"
tauri-plugin-updater = "=2.10.1"

# The transaction engine uses the immutable DOM protocol implementation as the
# sole authority for slate construction, transaction serialization, proof and
# signature validation.  These are deliberately revision pinned rather than
# copied into this wallet workspace.
dom-core = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-crypto = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-consensus = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-serialization = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-tx = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-slate = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-config = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-chain = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-node = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-pow = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-wallet-core-api = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }
dom-wallet-recovery = { git = "https://github.com/sorenplanck/dom-protocol", rev = "28ba3cefc9fbc913f126336482662528c68a7d8c" }

# Sidecar release authentication and atomic pointer handling are deliberately
# consumed from their reviewed protocol commit. This does not move the wallet's
# consensus crates away from the independent immutable revision above.
dom-sidecar = { git = "https://github.com/sorenplanck/dom-protocol", rev = "ab45a2944f22fe00f9b12984354f0d5d7cdd229a" }
