[package]
name = "dom-wallet-tauri-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dom-wallet-chain = { path = "../crates/dom-wallet-chain" }
dom-wallet-core = { path = "../crates/dom-wallet-core" }
dom-wallet-domain = { path = "../crates/dom-wallet-domain" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
tauri.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
tauri-build.workspace = true

[lib]
name = "dom_wallet_tauri_shell"
path = "src/lib.rs"

[[bin]]
name = "dom-wallet-tauri-shell"
path = "src/main.rs"
