[package]
name = "dom-wallet-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dom-wallet-domain = { path = "../dom-wallet-domain" }
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true
