[package]
name = "dom-wallet-core-recovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
bip39.workspace = true
dom-consensus.workspace = true
dom-core.workspace = true
dom-crypto.workspace = true
dom-serialization.workspace = true
dom-slate.workspace = true
dom-tx.workspace = true
dom-wallet-core-api.workspace = true
dom-wallet-recovery.workspace = true
dom-node.workspace = true
dom-wallet-core-protocol = { path = "../dom-wallet-core-protocol" }
dom-wallet-core-sync = { path = "../dom-wallet-core-sync" }
dom-wallet-domain = { path = "../dom-wallet-domain" }
rand.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
dom-wallet-embedded-core = { path = "../dom-wallet-embedded-core" }
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
