[package]
name = "dom-wallet-core-submit"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
dom-consensus.workspace = true
dom-wallet-core-api.workspace = true
dom-wallet-core-sync = { path = "../dom-wallet-core-sync" }
thiserror.workspace = true

[dev-dependencies]
dom-core.workspace = true
dom-crypto.workspace = true
dom-wallet-embedded-core = { path = "../dom-wallet-embedded-core" }
tempfile.workspace = true
