[package]
name = "dom-wallet-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
