[package]
name = "dom-wallet-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dom-wallet-crypto = { path = "../dom-wallet-crypto" }
dom-wallet-domain = { path = "../dom-wallet-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
